static/css/style.css
/*--
    Common Css
--*/
body {
  font-size: 12px;
  font-weight: 300;
  line-height: 25px;
  color: #3b4045;
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 300;
  margin: 0px;
}

h1 {
   color: #3c3c3c;
    padding-bottom: 15px;
    font-weight: normal;
    font-size: 44px;
    line-height: 40px;
}

h2 {
  font-size: 30px;
  line-height: 35px;
}

h3 {
  font-size: 23px;
  line-height: 25px;
}

h4 {
  font-size: 20px;
  line-height: 24px;
  font-weight: 400;
}

p {
  font-size: 16px;
  line-height: 25px;
  margin: 0px;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

a {
  -webkit-transition: all 0.2s ease-in-out 0s;
  -moz-transition: all 0.2s ease-in-out 0s;
  -o-transition: all 0.2s ease-in-out 0s;
  transition: all 0.2s ease-in-out 0s;
}

a:focus,
.btn:focus,
.btn:active:focus {
  box-shadow: none;
  outline: 0 none;
}

a,
a:active,
a:focus,
a:active {
  text-decoration: none;
}

.section {
  padding: 100px 0;
}


.top-head-shot a {
  color: #03d9ef;
}
.top-head-shot img {
  height: 51px;
}
.head-shot-col {
  float: right;
  margin:0 10px 0 10px;
}
/*05.11.19*/

.eapps-twitter-feed .eui-widget-title a{
  color: #fff !important;
}
.eapps-twitter-feed .eui-widget-title {
    padding-bottom: 0;
    margin-bottom: 15px !important;
    font-size: 23px !important;
    font-weight: normal !important;
    text-align: left !important;
 
}
.eapps-twitter-feed-extra-small .eapps-twitter-feed-posts-item-text {
    text-align: left;
}
li.nav-item.current a {
    color: #f68c29 !important;
}

@media only screen and (min-device-width : 768px) and (max-device-width : 1024px)  {



}


@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 

.row.top-head-shot {
    position: fixed;
    top: 20px;
    right: 170px;
}

}

@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {



}

@media (min-width: 320px) and (max-width: 480px) {


  .brief-outer .card-img{
    width: 100%;
}

  .row.top-head-shot{
    position: fixed;
    top: 10px;
    right: 20px;
  }
  button.navbar-toggler {
    right: 10px !important;
    top: 85px !important;
}
div#navbarResponsive {
    background-color: rgba(0, 0, 0, 0.9);
    padding-left: 15px;
    width: 221px;
    margin-top: 32px;
}
nav#top-nav{
  height: 150px;
}


}

@media (min-width: 481px) and (max-width: 767px) {

    .hero-area h1 {
    line-height: 32px !important;
    font-size: 25px !important;
    margin-top: 155px !important;
}
nav#top-nav{
  height: 150px;
}

.row.top-head-shot{
    position: fixed;
    top: 10px;
    right: 20px;
  }
  button.navbar-toggler {
    right: 10px !important;
    top: 85px !important;
}

}




section.section.sitemap {
    padding-top: 150px;
}
section.section.sitemap .heading{
      padding-bottom: 0px !important;
}
.top-head-shot {
  text-align:center;
  font-size: 13px;
  line-height: 16px;
  color: #fff;
  font-style: italic;
  font-weight: 600;
}
.animated .headshot-title, .confirmregistration .headshot-title{
    color: #242727;
}
nav#top-nav {
    background: rgba(0, 0, 0, 0.1);
}
.navigation.animated {
    background-color: #fff !important;
    box-shadow: 0 2px 7px 0px rgba(142, 142, 142, 0.15);
}
.headshot-container {
    padding: 0;
}
 .top-head-shot a {
    color: #f68c29;
    font-weight: normal;
    font-size: 11px;
}
span.headshot-title {
    position: absolute;
    font-weight: normal;
    font-size: 10px;
right: 60px;
    top: -5px;
}
.head-shot-col {
    margin-top: 10px;
}

/*end */

/*--
    custom heading
--*/
.text-center {
  text-align: center;
}

.heading {
  text-align: center;
  color: #777777;
  padding-bottom: 70px;
}

.heading h2 {
  color: #3c3c3c;
  padding-bottom: 15px;
  font-weight: 600;
  font-size: 40px;
  line-height: 40px;
}

.heading p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15px;
  line-height: 24px;
  font-weight: 300;
}

.btn {
  border-radius: 0;
}

.btn-home {
  background-color: #20b9cb;
  border-radius: 0px;
  color: #fff;
  font-size: 18px;
  padding: 10px 40px;
  margin-top: 30px;
}

.btn-home:hover,
.btn-home:focus {
  background-color: #fff;
  color: #555;
  border: 1px solid #fff;
}


/*Preloader*/
#preloader {
  background-color: #fff;
  bottom: auto;
  height: 100%;
  left: auto;
  position: fixed;
  right: auto;
  top: auto;
  width: 100%;
  z-index: 9999;
}

.book {
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  position: relative;
  margin: 0 auto;
  border: 5px solid #ecf0f1;
  width: 100px;
  height: 60px;
}

.book__page {
  position: absolute;
  left: 50%;
  top: -5px;
  margin: 0 auto;
  border-top: 5px solid #ecf0f1;
  border-bottom: 5px solid #ecf0f1;
  border-right: 5px solid #ecf0f1;
  background: #f68d29;
  width: 50px;
  height: 60px;
  -webkit-transform-origin: 0% 50%;
  -ms-transform-origin: 0% 50%;
  transform-origin: 0% 50%;
  -webkit-animation: flip 1.2s infinite linear;
  animation: flip 1.2s infinite linear;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.book__page:nth-child(1) {
  z-index: -1;
  -webkit-animation-delay: 1.4s;
  animation-delay: 1.4s;
}

.book__page:nth-child(2) {
  z-index: -2;
  -webkit-animation-delay: 2.8s;
  animation-delay: 2.8s;
}

.book__page:nth-child(3) {
  z-index: -3;
  -webkit-animation-delay: 4.2s;
  animation-delay: 4.2s;
}

.breif-row {
    border: 2px solid !important;
    padding: 10px 10px 10px 10px !important;
    margin-bottom: 10px !important;
    border-color: #DDDDDD !important;
}

.breif-row img {
    max-height: 185px !important;
}

.pagination {
    display: flex;
    list-style: none;
    border-radius: .25rem;
    margin: 20px 0;
    padding: 0;
    justify-content: center;
}
/* ... */

